apps/cachet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cachet
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8000
  selector:
    app: cachet
