apps/cachet/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cachet
spec:
  to:
    kind: Service
    name: cachet
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
